--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Build the docs
         run: |
-          cd docs
+          cd doc
           make html
 
       - name: Deploy to GitHub Pages
