--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -34,3 +34,15 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: doc/build/html/
           force_orphan: true
+
+      - name: Create conda package
+        run: |
+          python -m pip install conda-build
+          conda-build . --output-folder condapkg
+
+      - name: Upload artifact to github
+        uses: actions/upload-artifact@v3
+        with:
+          name: conda-package
+          path: condapkg/win-64/*.tar.bz2
+
