--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -34,7 +34,19 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: doc/build/html/
           force_orphan: true
-
+  build-conda-pkg:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+          
       - name: Create conda package
         run: |
           python -m pip install conda-build
@@ -45,4 +57,3 @@ jobs:
         with:
           name: conda-package
           path: condapkg/win-64/*.tar.bz2
-
