--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -46,10 +46,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
-          
+
       - name: Create conda package
         run: |
-          python -m pip install conda-build
+          python -m pip install conda-build versioneer
           conda-build . --output-folder condapkg
 
       - name: Upload artifact to github
