--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -49,7 +49,7 @@ jobs:
 
       - name: Create conda package
         run: |
-          python -m pip install conda-build versioneer
+          python -m pip install versioneer conda-build
           conda-build . --output-folder condapkg
 
       - name: Upload artifact to github
