--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -42,14 +42,11 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-      - name: Install dependencies
+      - name: Install dependencies an build conda package
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
-
-      - name: Create conda package
-        run: |
-          python -m pip install versioneer conda-build
+          pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install versioneer conda-build
           conda-build . --output-folder condapkg
 
       - name: Upload artifact to github
