--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,6 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt-get update && sudo apt-get install ffmpeg libsm6 libxext6  -y
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
 
