--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt-get update && sudo apt-get install ffmpeg libsm6 libxext6  -y
+          sudo apt-get update && sudo apt install libgl1-mesa-glx
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
 
